--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3072,12 +3072,12 @@ ul.tag-men {
 }
 
 .quantity{
-	margin-top: 1em;
-	margin-right: 20px;
+	margin-top: 3em;
+	margin-right: 10px;
 	float: left;
 }
-
-#cart table img{
+#cart img,
+.cart table img{
 	height: 50px;
 }
 
